.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  labels:
    app: todo-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: todo-api
    app.kubernetes.io/version: v1.0.0
spec:
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - name: todo-api
        image: ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGETAG}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 20
