.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-svc
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
